# vscode-toolbox

./: .gitignore  .stylelintignore  LICENSE  README.md  bump.config.ts  eslint.config.ts  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  stylelint.config.js
.github/workflows/: ci.yml  release.yml
app/: app.vue
app/assets/scss/: breakpoints.scss  fonts.scss  global.scss  (+5 more)
app/composables/: app-settings.ts  app-update.ts  autostart.ts  available-themes.ts  hidden-projects.ts  modals.ts  project-keyboard-navigation.ts  project-manager.ts  reveal-shortcut.ts  search-input-focus-guard.ts  tauri-store.ts  theme-class.ts  use-string-color.ts  vscode-recent.ts  vscode.ts  windows-capabilities.ts
app/layouts/: default.vue  settings.vue
app/modules/: tauri.ts
app/pages/: index.vue  settings.vue
app/plugins/: disable-contextmenu.client.ts  focus-loop.client.ts  init.client.ts  vue-final-modal.ts
app/stores/: app-settings.ts  app-update.ts  app.ts  hidden-projects.ts  project.ts  task.ts
app/types/: app-settings.ts  project.ts  vscode-recent.ts  vscode.ts
app/utils/: bmc.ts  delay.ts  fs.ts  percent.ts  project.ts
layers/ui/: nuxt.config.ts
scripts/: tauri-test.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.test.conf.json
src-tauri/capabilities/: desktop.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  macos_vscode.rs  macos_window.rs  main.rs  reveal_shortcut.rs  tray.rs  vscode_uri.rs  window_focus.rs  window_position.rs  window_theme.rs  windows_focus.rs  windows_vscode.rs
(+74 files in other folders)
