[package]
name = "vscode-toolbox"
version = "1.1.1"
description = "Vscode toolbox"
authors = [ "TrenLok" ]
license = "MIT"
repository = "https://github.com/trenlok/vscode-toolbox"
edition = "2021"

[lib]
name = "vscode_toolbox_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies.tauri-build]
version = "2.5.6"
features = [ ]

[dependencies]
tauri-plugin-shell = "2.3.5"
tauri-plugin-notification = "2.3.3"
tauri-plugin-os = "2.3.2"
tauri-plugin-fs = { version = "2.5.0", features = ["watch"] }
tauri-plugin-store = "2.4.2"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-log = "2.8.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-opener = "2.5.3"
tauri-plugin-single-instance = "2.4.1"
serde_json = "1.0.149"
rusqlite = { version = "0.39.0", features = [ "bundled" ] }
chrono = "0.4.44"
log = "^0.4.29"

[dependencies.tauri]
version = "2.10.3"
features = [
  "tray-icon",
  "unstable"
]

[dependencies.serde]
version = "1.0.228"
features = [ "derive" ]

[target.'cfg(target_os = "windows")'.dependencies]
windows-version = "0.1.7"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2.10.1"
window-vibrancy = "0.7.1"
